# cavlib

./: .clangd  CMakeLists.txt  README.md
experimental/: README.md
experimental/mish/: functors.hpp  optional.hpp
experimental/string/: AlgoStatePrinter.hpp  charconv.hpp
experimental/tuplish/: BiLevelCache.hpp  ClassCache.hpp  ClassMap.hpp  ClassSet.hpp  dependencies.hpp  tuple.hpp  tuple_utils.hpp
experimental/vectors/: IndexProxyIter.hpp  SoAArray.hpp  SoASpan.hpp
include/: Chrono.hpp  MatrixKD.hpp  OwnSpan.hpp  RaiiWrap.hpp  StaticStr.hpp  UnionFind.hpp  VectorKD.hpp  XoshiroCpp.hpp  comptime_test.hpp  enum_name.hpp  instance_of.hpp  limits.hpp  macros.hpp  mp_base.hpp  mp_utils.hpp  random.hpp  string_utils.hpp  syntactic_sugars.hpp  type_name.hpp  util_functions.hpp
include/cav/: Chrono.hpp  MatrixKD.hpp  OwnSpan.hpp  RaiiWrap.hpp  StaticStr.hpp  UnionFind.hpp  VectorKD.hpp  comptime_test.hpp  enum_name.hpp  instance_of.hpp  limits.hpp  macros.hpp  mp_base.hpp  mp_utils.hpp  random.hpp  string_utils.hpp  type_name.hpp  util_functions.hpp
include/cav/comptime/: call_utils.hpp  enum_name.hpp  instance_of.hpp  macros.hpp  mp_base.hpp  mp_utils.hpp  syntactic_sugars.hpp  test.hpp  type_name.hpp
include/cav/mish/: Chrono.hpp  ClParser.hpp  RaiiWrap.hpp  errors.hpp  util_functions.hpp
include/cav/numeric/: ScaledInt.hpp  TaggedScalar.hpp  TolFloat.hpp  random.hpp  sort.hpp  sorting_networks.hpp  zero.hpp
include/cav/string/: StaticStr.hpp  string_utils.hpp
include/cav/tuplish/: dependencies.hpp  tuple.hpp  type_map.hpp  type_set.hpp
(+7 files in other folders)
